# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
ai_model/: base.py
ai_model/detector/: base_detector.py
ai_model/detector/face/: yolo_face.py
ai_model/extractor/: base_extractor.py
api/: api.py
config/: __init__.py  app.py
constant/: app.py  face_analysis.py
docker/: Dockerfile  docker-compose-redis.yaml  docker-compose.yaml
handler/: face.py  general.py
route/: router.py
routes/: router.py
schema/: detection.py  face.py
service/: face_analysis.py
util/: distance.py  logger.py
util/config/: ai_model.py  config.py
