[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI Template"
authors = ["Khiem Le <khiemledev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"
python-multipart = "^0.0.9"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
