[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "shortuuid>=1.0.13",
    "uvicorn>=0.35.0",
]
